--- a/activity.html
+++ b/activity.html
@@ -19,7 +19,7 @@
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="author" content="Dmitry Volkov">
-	<title>Unifund – NFT Marketplace HTML Template</title>
+	<title>Unifund – Contract Marketplace HTML Template</title>
 
 </head>
 <body>
@@ -192,7 +192,7 @@
 									<img src="img/cover/cover1.jpg" alt="">
 								</a>
 								<div class="activity__content">
-									<h3 class="activity__title"><a href="item.html">Walking on Air</a></h3>
+									<h3 class="activity__title"><a href="item.html">Pico</a></h3>
 									<p class="activity__text">listed by <a href="author.html">@Nickname</a> <br>for <b>0.049 ETH</b></p>
 									<span class="activity__time">4 minutes ago</span>
 								</div>
@@ -205,7 +205,7 @@
 									<img src="img/cover/cover2.jpg" alt="">
 								</a>
 								<div class="activity__content">
-									<h3 class="activity__title"><a href="item.html">To Infinity And Beyond</a></h3>
+									<h3 class="activity__title"><a href="item.html">Only Good</a></h3>
 									<p class="activity__text">9 editions listed by <a href="author.html">@neo</a> <br>for <b>0.085 ETH</b> each</p>
 									<span class="activity__time">21 minutes ago</span>
 								</div>
@@ -218,7 +218,7 @@
 									<img src="img/cover/cover3.jpg" alt="">
 								</a>
 								<div class="activity__content">
-									<h3 class="activity__title"><a href="item.html">Flowers in Concrete</a></h3>
+									<h3 class="activity__title"><a href="item.html">Nebia Shower Tech</a></h3>
 									<p class="activity__text">purchased by <a href="author.html">@johndoe</a> <b>0x23d2dc92b...82c6</b> for <b>0.011 ETH</b> from <a href="author.html">@min1max</a></p>
 									<span class="activity__time">21 minutes ago</span>
 								</div>
@@ -231,7 +231,7 @@
 									<img src="img/cover/cover4.jpg" alt="">
 								</a>
 								<div class="activity__content">
-									<h3 class="activity__title"><a href="item.html">Industrial Revolution</a></h3>
+									<h3 class="activity__title"><a href="item.html">Tilt Lamp</a></h3>
 									<p class="activity__text">transferred from <a href="author.html">@midinh</a> <br>to <a href="author.html">@johndoe</a></p>
 									<span class="activity__time">23 minutes ago</span>
 								</div>
@@ -244,7 +244,7 @@
 									<img src="img/cover/cover5.jpg" alt="">
 								</a>
 								<div class="activity__content">
-									<h3 class="activity__title"><a href="item.html">Tranquility</a></h3>
+									<h3 class="activity__title"><a href="item.html">Tetra Puzzles</a></h3>
 									<p class="activity__text"><a href="author.html">@aaarthur</a> offered <b>0.002 WETH</b></p>
 									<span class="activity__time">41 minutes ago</span>
 								</div>
@@ -283,7 +283,7 @@
 									<img src="img/cover/cover8.jpg" alt="">
 								</a>
 								<div class="activity__content">
-									<h3 class="activity__title"><a href="item.html">Walking on Air</a></h3>
+									<h3 class="activity__title"><a href="item.html">Pico</a></h3>
 									<p class="activity__text">started following <a href="author.html">@johndoe</a></p>
 									<span class="activity__time">49 minutes ago</span>
 								</div>
@@ -299,7 +299,7 @@
 									<img src="img/cover/cover1.jpg" alt="">
 								</a>
 								<div class="activity__content">
-									<h3 class="activity__title"><a href="item.html">Walking on Air</a></h3>
+									<h3 class="activity__title"><a href="item.html">Pico</a></h3>
 									<p class="activity__text">listed by <a href="author.html">@Nickname</a> <br>for <b>0.049 ETH</b></p>
 									<span class="activity__time">4 minutes ago</span>
 								</div>
@@ -312,7 +312,7 @@
 									<img src="img/cover/cover2.jpg" alt="">
 								</a>
 								<div class="activity__content">
-									<h3 class="activity__title"><a href="item.html">To Infinity And Beyond</a></h3>
+									<h3 class="activity__title"><a href="item.html">Only Good</a></h3>
 									<p class="activity__text">9 editions listed by <a href="author.html">@neo</a> <br>for <b>0.085 ETH</b> each</p>
 									<span class="activity__time">21 minutes ago</span>
 								</div>
@@ -325,7 +325,7 @@
 									<img src="img/cover/cover3.jpg" alt="">
 								</a>
 								<div class="activity__content">
-									<h3 class="activity__title"><a href="item.html">Flowers in Concrete</a></h3>
+									<h3 class="activity__title"><a href="item.html">Nebia Shower Tech</a></h3>
 									<p class="activity__text">purchased by <a href="author.html">@johndoe</a> <b>0x23d2dc92b...82c6</b> for <b>0.011 ETH</b> from <a href="author.html">@min1max</a></p>
 									<span class="activity__time">21 minutes ago</span>
 								</div>
@@ -338,7 +338,7 @@
 									<img src="img/cover/cover4.jpg" alt="">
 								</a>
 								<div class="activity__content">
-									<h3 class="activity__title"><a href="item.html">Industrial Revolution</a></h3>
+									<h3 class="activity__title"><a href="item.html">Tilt Lamp</a></h3>
 									<p class="activity__text">transferred from <a href="author.html">@midinh</a> <br>to <a href="author.html">@johndoe</a></p>
 									<span class="activity__time">23 minutes ago</span>
 								</div>
@@ -351,7 +351,7 @@
 									<img src="img/cover/cover5.jpg" alt="">
 								</a>
 								<div class="activity__content">
-									<h3 class="activity__title"><a href="item.html">Tranquility</a></h3>
+									<h3 class="activity__title"><a href="item.html">Tetra Puzzles</a></h3>
 									<p class="activity__text"><a href="author.html">@aaarthur</a> offered <b>0.002 WETH</b></p>
 									<span class="activity__time">41 minutes ago</span>
 								</div>
@@ -390,7 +390,7 @@
 									<img src="img/cover/cover8.jpg" alt="">
 								</a>
 								<div class="activity__content">
-									<h3 class="activity__title"><a href="item.html">Walking on Air</a></h3>
+									<h3 class="activity__title"><a href="item.html">Pico</a></h3>
 									<p class="activity__text">started following <a href="author.html">@johndoe</a></p>
 									<span class="activity__time">49 minutes ago</span>
 								</div>
@@ -419,7 +419,7 @@
 					<div class="footer__logo">
 						<img src="img/logo.svg" alt="">
 					</div> 
-					<p class="footer__tagline">Digital marketplace for crypto collectibles <br>and non-fungible tokens (NFTs). <br>Buy, sell, and discover exclusive digital assets.</p>
+					<p class="footer__tagline">Digital marketplace for crypto collectibles <br>and non-fungible tokens (Contracts). <br>Buy, sell, and discover Contract Titles.</p>
 
 					<div class="footer__lang">
 						<a class="footer__lang-btn" href="#" role="button" id="dropdownLang" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
