--- a/author.html
+++ b/author.html
@@ -19,7 +19,7 @@
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="author" content="Dmitry Volkov">
-	<title>Unifund – NFT Marketplace HTML Template</title>
+	<title>Unifund – Contract Marketplace HTML Template</title>
 
 </head>
 <body>
@@ -124,7 +124,7 @@
 							</a>
 							<h1 class="author__name"><a href="author.html">Justin King</a></h1>
 							<h2 class="author__nickname"><a href="author.html">@jkmoney</a></h2>
-							<p class="author__text">All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary</p>
+							<p class="author__text">I am here to build my empire. Making millions baby when everyone else is sleeping.</p>
 							<div class="author__code">
 								<input type="text" value="XAVUW3sw3ZUnifundcLtemEfX3tGuX2plateWdh" id="author-code">
 								<button type="button">
@@ -190,7 +190,7 @@
 												<span class="card__clock card__clock--2"></span>
 											</span>
 										</a>
-										<h3 class="card__title"><a href="item.html">Walking on Air</a></h3>
+										<h3 class="card__title"><a href="item.html">Pico</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
 											<a href="author.html">@jkmoney</a>
@@ -219,7 +219,7 @@
 											<img src="img/cover/slide3.jpg" alt="">
 										</div>
 
-										<h3 class="card__title"><a href="item.html">To Infinity And Beyond</a></h3>
+										<h3 class="card__title"><a href="item.html">Only Good</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
 											<a href="author.html">@jkmoney</a>
@@ -246,7 +246,7 @@
 											<img src="img/cover/cover2.jpg" alt="">
 											<span class="card__time">15 minutes left</span>
 										</a>
-										<h3 class="card__title"><a href="item.html">Les Immortels, the Treachery of Artificial Shadows</a></h3>
+										<h3 class="card__title"><a href="item.html">Reframed Eyeware</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
 											<a href="author.html">@jkmoney</a>
@@ -273,7 +273,7 @@
 											<img src="img/cover/cover3.jpg" alt="">
 											<span class="card__time">an hour left</span>
 										</a>
-										<h3 class="card__title"><a href="item.html">Flowers in Concrete</a></h3>
+										<h3 class="card__title"><a href="item.html">Nebia Shower Tech</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
 											<a href="author.html">@jkmoney</a>
@@ -299,7 +299,7 @@
 										<a href="item.html" class="card__cover">
 											<img src="img/cover/cover4.jpg" alt="">
 										</a>
-										<h3 class="card__title"><a href="item.html">Industrial Revolution</a></h3>
+										<h3 class="card__title"><a href="item.html">Tilt Lamp</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
 											<a href="author.html">@jkmoney</a>
@@ -326,7 +326,7 @@
 											<img src="img/cover/cover5.jpg" alt="">
 											<span class="card__time">an hour left</span>
 										</a>
-										<h3 class="card__title"><a href="item.html">I Love You</a></h3>
+										<h3 class="card__title"><a href="item.html">AZIO IZO</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
 											<a href="author.html">@jkmoney</a>
@@ -355,7 +355,7 @@
 										<a href="item.html" class="card__cover">
 											<img src="img/cover/cover1.jpg" alt="">
 										</a>
-										<h3 class="card__title"><a href="item.html">Walking on Air</a></h3>
+										<h3 class="card__title"><a href="item.html">Pico</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
 											<a href="author.html">@jkmoney</a>
@@ -381,7 +381,7 @@
 										<a href="item.html" class="card__cover">
 											<img src="img/cover/cover8.jpg" alt="">
 										</a>
-										<h3 class="card__title"><a href="item.html">To Infinity And Beyond</a></h3>
+										<h3 class="card__title"><a href="item.html">Only Good</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
 											<a href="author.html">@jkmoney</a>
@@ -408,7 +408,7 @@
 											<img src="img/cover/cover2.jpg" alt="">
 											<span class="card__time">15 minutes left</span>
 										</a>
-										<h3 class="card__title"><a href="item.html">Les Immortels, the Treachery of Artificial Shadows</a></h3>
+										<h3 class="card__title"><a href="item.html">Reframed Eyeware</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
 											<a href="author.html">@jkmoney</a>
@@ -435,7 +435,7 @@
 											<img src="img/cover/cover3.jpg" alt="">
 											<span class="card__time">an hour left</span>
 										</a>
-										<h3 class="card__title"><a href="item.html">Flowers in Concrete</a></h3>
+										<h3 class="card__title"><a href="item.html">Nebia Shower Tech</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
 											<a href="author.html">@jkmoney</a>
@@ -461,7 +461,7 @@
 										<a href="item.html" class="card__cover">
 											<img src="img/cover/cover4.jpg" alt="">
 										</a>
-										<h3 class="card__title"><a href="item.html">Industrial Revolution</a></h3>
+										<h3 class="card__title"><a href="item.html">Tilt Lamp</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
 											<a href="author.html">@jkmoney</a>
@@ -488,7 +488,7 @@
 											<img src="img/cover/cover5.jpg" alt="">
 											<span class="card__time">an hour left</span>
 										</a>
-										<h3 class="card__title"><a href="item.html">I Love You</a></h3>
+										<h3 class="card__title"><a href="item.html">AZIO IZO</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
 											<a href="author.html">@jkmoney</a>
@@ -525,7 +525,7 @@
 										<a href="item.html" class="card__cover">
 											<img src="img/cover/cover8.jpg" alt="">
 										</a>
-										<h3 class="card__title"><a href="item.html">Walking on Air</a></h3>
+										<h3 class="card__title"><a href="item.html">Pico</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
 											<a href="author.html">@jkmoney</a>
@@ -551,7 +551,7 @@
 										<a href="item.html" class="card__cover">
 											<img src="img/cover/cover7.jpg" alt="">
 										</a>
-										<h3 class="card__title"><a href="item.html">Les Immortels, the Treachery of Artificial Shadows</a></h3>
+										<h3 class="card__title"><a href="item.html">Reframed Eyeware</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
 											<a href="author.html">@jkmoney</a>
@@ -577,7 +577,7 @@
 										<a href="item.html" class="card__cover">
 											<img src="img/cover/cover6.jpg" alt="">
 										</a>
-										<h3 class="card__title"><a href="item.html">Flowers in Concrete</a></h3>
+										<h3 class="card__title"><a href="item.html">Nebia Shower Tech</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
 											<a href="author.html">@jkmoney</a>
@@ -603,7 +603,7 @@
 										<a href="item.html" class="card__cover">
 											<img src="img/cover/cover5.jpg" alt="">
 										</a>
-										<h3 class="card__title"><a href="item.html">Industrial Revolution</a></h3>
+										<h3 class="card__title"><a href="item.html">Tilt Lamp</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
 											<a href="author.html">@jkmoney</a>
@@ -629,7 +629,7 @@
 										<a href="item.html" class="card__cover">
 											<img src="img/cover/cover4.jpg" alt="">
 										</a>
-										<h3 class="card__title"><a href="item.html">I Love You</a></h3>
+										<h3 class="card__title"><a href="item.html">AZIO IZO</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
 											<a href="author.html">@jkmoney</a>
@@ -655,7 +655,7 @@
 										<a href="item.html" class="card__cover">
 											<img src="img/cover/cover3.jpg" alt="">
 										</a>
-										<h3 class="card__title"><a href="item.html">To Infinity And Beyond</a></h3>
+										<h3 class="card__title"><a href="item.html">Only Good</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
 											<a href="author.html">@jkmoney</a>
@@ -760,7 +760,7 @@
 													<img src="img/cover/cover1.jpg" alt="">
 												</a>
 												<div class="activity__content">
-													<h3 class="activity__title"><a href="item.html">Walking on Air</a></h3>
+													<h3 class="activity__title"><a href="item.html">Pico</a></h3>
 													<p class="activity__text">listed by <a href="author.html">@Nickname</a> <br>for <b>0.049 ETH</b></p>
 													<span class="activity__time">4 minutes ago</span>
 												</div>
@@ -773,7 +773,7 @@
 													<img src="img/cover/cover2.jpg" alt="">
 												</a>
 												<div class="activity__content">
-													<h3 class="activity__title"><a href="item.html">To Infinity And Beyond</a></h3>
+													<h3 class="activity__title"><a href="item.html">Only Good</a></h3>
 													<p class="activity__text">9 editions listed by <a href="author.html">@neo</a> <br>for <b>0.085 ETH</b> each</p>
 													<span class="activity__time">21 minutes ago</span>
 												</div>
@@ -786,7 +786,7 @@
 													<img src="img/cover/cover3.jpg" alt="">
 												</a>
 												<div class="activity__content">
-													<h3 class="activity__title"><a href="item.html">Flowers in Concrete</a></h3>
+													<h3 class="activity__title"><a href="item.html">Nebia Shower Tech</a></h3>
 													<p class="activity__text">purchased by <a href="author.html">@johndoe</a> <b>0x23d2dc92b...82c6</b> for <b>0.011 ETH</b> from <a href="author.html">@min1max</a></p>
 													<span class="activity__time">21 minutes ago</span>
 												</div>
@@ -799,7 +799,7 @@
 													<img src="img/cover/cover4.jpg" alt="">
 												</a>
 												<div class="activity__content">
-													<h3 class="activity__title"><a href="item.html">Industrial Revolution</a></h3>
+													<h3 class="activity__title"><a href="item.html">Tilt Lamp</a></h3>
 													<p class="activity__text">transferred from <a href="author.html">@midinh</a> <br>to <a href="author.html">@johndoe</a></p>
 													<span class="activity__time">23 minutes ago</span>
 												</div>
@@ -812,7 +812,7 @@
 													<img src="img/cover/cover5.jpg" alt="">
 												</a>
 												<div class="activity__content">
-													<h3 class="activity__title"><a href="item.html">Tranquility</a></h3>
+													<h3 class="activity__title"><a href="item.html">Tetra Puzzles</a></h3>
 													<p class="activity__text"><a href="author.html">@aaarthur</a> offered <b>0.002 WETH</b></p>
 													<span class="activity__time">41 minutes ago</span>
 												</div>
@@ -851,7 +851,7 @@
 													<img src="img/cover/cover8.jpg" alt="">
 												</a>
 												<div class="activity__content">
-													<h3 class="activity__title"><a href="item.html">Walking on Air</a></h3>
+													<h3 class="activity__title"><a href="item.html">Pico</a></h3>
 													<p class="activity__text">started following <a href="author.html">@johndoe</a></p>
 													<span class="activity__time">49 minutes ago</span>
 												</div>
@@ -867,7 +867,7 @@
 													<img src="img/cover/cover1.jpg" alt="">
 												</a>
 												<div class="activity__content">
-													<h3 class="activity__title"><a href="item.html">Walking on Air</a></h3>
+													<h3 class="activity__title"><a href="item.html">Pico</a></h3>
 													<p class="activity__text">listed by <a href="author.html">@Nickname</a> <br>for <b>0.049 ETH</b></p>
 													<span class="activity__time">4 minutes ago</span>
 												</div>
@@ -880,7 +880,7 @@
 													<img src="img/cover/cover2.jpg" alt="">
 												</a>
 												<div class="activity__content">
-													<h3 class="activity__title"><a href="item.html">To Infinity And Beyond</a></h3>
+													<h3 class="activity__title"><a href="item.html">Only Good</a></h3>
 													<p class="activity__text">9 editions listed by <a href="author.html">@neo</a> <br>for <b>0.085 ETH</b> each</p>
 													<span class="activity__time">21 minutes ago</span>
 												</div>
@@ -893,7 +893,7 @@
 													<img src="img/cover/cover3.jpg" alt="">
 												</a>
 												<div class="activity__content">
-													<h3 class="activity__title"><a href="item.html">Flowers in Concrete</a></h3>
+													<h3 class="activity__title"><a href="item.html">Nebia Shower Tech</a></h3>
 													<p class="activity__text">purchased by <a href="author.html">@johndoe</a> <b>0x23d2dc92b...82c6</b> for <b>0.011 ETH</b> from <a href="author.html">@min1max</a></p>
 													<span class="activity__time">21 minutes ago</span>
 												</div>
@@ -906,7 +906,7 @@
 													<img src="img/cover/cover4.jpg" alt="">
 												</a>
 												<div class="activity__content">
-													<h3 class="activity__title"><a href="item.html">Industrial Revolution</a></h3>
+													<h3 class="activity__title"><a href="item.html">Tilt Lamp</a></h3>
 													<p class="activity__text">transferred from <a href="author.html">@midinh</a> <br>to <a href="author.html">@johndoe</a></p>
 													<span class="activity__time">23 minutes ago</span>
 												</div>
@@ -919,7 +919,7 @@
 													<img src="img/cover/cover5.jpg" alt="">
 												</a>
 												<div class="activity__content">
-													<h3 class="activity__title"><a href="item.html">Tranquility</a></h3>
+													<h3 class="activity__title"><a href="item.html">Tetra Puzzles</a></h3>
 													<p class="activity__text"><a href="author.html">@aaarthur</a> offered <b>0.002 WETH</b></p>
 													<span class="activity__time">41 minutes ago</span>
 												</div>
@@ -958,7 +958,7 @@
 													<img src="img/cover/cover8.jpg" alt="">
 												</a>
 												<div class="activity__content">
-													<h3 class="activity__title"><a href="item.html">Walking on Air</a></h3>
+													<h3 class="activity__title"><a href="item.html">Pico</a></h3>
 													<p class="activity__text">started following <a href="author.html">@johndoe</a></p>
 													<span class="activity__time">49 minutes ago</span>
 												</div>
@@ -1089,7 +1089,7 @@
 					<div class="footer__logo">
 						<img src="img/logo.svg" alt="">
 					</div> 
-					<p class="footer__tagline">Digital marketplace for crypto collectibles <br>and non-fungible tokens (NFTs). <br>Buy, sell, and discover exclusive digital assets.</p>
+					<p class="footer__tagline">Digital marketplace for crypto collectibles <br>and non-fungible tokens (Contracts). <br>Buy, sell, and discover Contract Titles.</p>
 
 					<div class="footer__lang">
 						<a class="footer__lang-btn" href="#" role="button" id="dropdownLang" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
