--- a/collection.html
+++ b/collection.html
@@ -19,7 +19,7 @@
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="author" content="Dmitry Volkov">
-	<title>Unifund – NFT Marketplace HTML Template</title>
+	<title>Unifund – Contract Marketplace HTML Template</title>
 
 </head>
 <body>
@@ -124,7 +124,7 @@
 							</a>
 							<h1 class="author__name"><a href="author.html">Justin King</a></h1>
 							<h2 class="author__nickname"><a href="author.html">@jkmoney</a></h2>
-							<p class="author__text">All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary</p>
+							<p class="author__text">I am here to build my empire. Making millions baby when everyone else is sleeping.</p>
 							<div class="author__code">
 								<input type="text" value="XAVUW3sw3ZUnifundcLtemEfX3tGuX2plateWdh" id="author-code">
 								<button type="button">
@@ -161,7 +161,7 @@
 								<a href="item.html" class="card__cover">
 									<img src="img/cover/cover8.jpg" alt="">
 								</a>
-								<h3 class="card__title"><a href="item.html">Walking on Air</a></h3>
+								<h3 class="card__title"><a href="item.html">Pico</a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar5.jpg" alt="">
 									<a href="author.html">@jkmoney</a>
@@ -187,7 +187,7 @@
 								<a href="item.html" class="card__cover">
 									<img src="img/cover/cover7.jpg" alt="">
 								</a>
-								<h3 class="card__title"><a href="item.html">Les Immortels, the Treachery of Artificial Shadows</a></h3>
+								<h3 class="card__title"><a href="item.html">Reframed Eyeware</a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar5.jpg" alt="">
 									<a href="author.html">@jkmoney</a>
@@ -213,7 +213,7 @@
 								<a href="#modal-asset" class="card__cover open-modal">
 									<img src="img/cover/cover6.jpg" alt="">
 								</a>
-								<h3 class="card__title"><a href="#modal-asset" class="open-modal">Flowers in Concrete (Modal)</a></h3>
+								<h3 class="card__title"><a href="#modal-asset" class="open-modal">Nebia Shower Tech </a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar5.jpg" alt="">
 									<a href="author.html">@jkmoney</a>
@@ -239,7 +239,7 @@
 								<a href="item.html" class="card__cover">
 									<img src="img/cover/cover5.jpg" alt="">
 								</a>
-								<h3 class="card__title"><a href="item.html">Industrial Revolution</a></h3>
+								<h3 class="card__title"><a href="item.html">Tilt Lamp</a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar5.jpg" alt="">
 									<a href="author.html">@jkmoney</a>
@@ -265,7 +265,7 @@
 								<a href="item.html" class="card__cover">
 									<img src="img/cover/cover4.jpg" alt="">
 								</a>
-								<h3 class="card__title"><a href="item.html">I Love You</a></h3>
+								<h3 class="card__title"><a href="item.html">AZIO IZO</a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar5.jpg" alt="">
 									<a href="author.html">@jkmoney</a>
@@ -291,7 +291,7 @@
 								<a href="item.html" class="card__cover">
 									<img src="img/cover/cover3.jpg" alt="">
 								</a>
-								<h3 class="card__title"><a href="item.html">To Infinity And Beyond</a></h3>
+								<h3 class="card__title"><a href="item.html">Only Good</a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar5.jpg" alt="">
 									<a href="author.html">@jkmoney</a>
@@ -368,7 +368,7 @@
 									<a href="author.html" class="collection__avatar collection__avatar--verified">
 										<img src="img/avatars/avatar9.jpg" alt="">
 									</a>
-									<h3 class="collection__name"><a href="collection.html">NFTheft</a></h3>
+									<h3 class="collection__name"><a href="collection.html">Contractheft</a></h3>
 									<span class="collection__number">ERC-721</span>
 								</div>
 							</div>
@@ -390,7 +390,7 @@
 									<a href="author.html" class="collection__avatar">
 										<img src="img/avatars/avatar15.jpg" alt="">
 									</a>
-									<h3 class="collection__name"><a href="collection.html">ProphecyNFT</a></h3>
+									<h3 class="collection__name"><a href="collection.html">ProphecyContract</a></h3>
 									<span class="collection__number">ERC-721</span>
 								</div>
 							</div>
@@ -423,7 +423,7 @@
 									<a href="author.html" class="collection__avatar collection__avatar--verified">
 										<img src="img/avatars/avatar15.jpg" alt="">
 									</a>
-									<h3 class="collection__name"><a href="collection.html">InventoryNFT</a></h3>
+									<h3 class="collection__name"><a href="collection.html">InventoryContract</a></h3>
 									<span class="collection__number">ERC-721</span>
 								</div>
 							</div>
@@ -448,7 +448,7 @@
 					<div class="footer__logo">
 						<img src="img/logo.svg" alt="">
 					</div> 
-					<p class="footer__tagline">Digital marketplace for crypto collectibles <br>and non-fungible tokens (NFTs). <br>Buy, sell, and discover exclusive digital assets.</p>
+					<p class="footer__tagline">Digital marketplace for crypto collectibles <br>and non-fungible tokens (Contracts). <br>Buy, sell, and discover Contract Titles.</p>
 
 					<div class="footer__lang">
 						<a class="footer__lang-btn" href="#" role="button" id="dropdownLang" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
