--- a/founders.html
+++ b/founders.html
@@ -19,7 +19,7 @@
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="author" content="Dmitry Volkov">
-	<title>Unifund – NFT Marketplace HTML Template</title>
+	<title>Unifund – Contract Marketplace HTML Template</title>
 
 </head>
 <body>
@@ -127,7 +127,7 @@
 				<!-- title -->
 				<div class="col-12">
 					<div class="main__title main__title--page">
-						<h1>Authors</h1>
+						<h1>Founders</h1>
 					</div>
 				</div>
 				<!-- end title -->
@@ -169,7 +169,7 @@
 							</a>
 							<h3 class="author__name"><a href="author.html">Adam Zapel</a></h3>
 							<h3 class="author__nickname"><a href="author.html">@aaarthur</a></h3>
-							<p class="author__text">All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary</p>
+							<p class="author__text">I am here to build my empire. Making millions baby when everyone else is sleeping.</p>
 							<div class="author__wrap">
 								<div class="author__followers">
 									<p>3829</p>
@@ -278,7 +278,7 @@
 							</a>
 							<h3 class="author__name"><a href="author.html">Mona Lott</a></h3>
 							<h3 class="author__nickname"><a href="author.html">@fantraingle</a></h3>
-							<p class="author__text">All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary</p>
+							<p class="author__text">I am here to build my empire. Making millions baby when everyone else is sleeping.</p>
 							<div class="author__wrap">
 								<div class="author__followers">
 									<p>5 924</p>
@@ -370,7 +370,7 @@
 					<div class="footer__logo">
 						<img src="img/logo.svg" alt="">
 					</div> 
-					<p class="footer__tagline">Digital marketplace for crypto collectibles <br>and non-fungible tokens (NFTs). <br>Buy, sell, and discover exclusive digital assets.</p>
+					<p class="footer__tagline">Digital marketplace for crypto collectibles <br>and non-fungible tokens (Contracts). <br>Buy, sell, and discover Contract Titles.</p>
 
 					<div class="footer__lang">
 						<a class="footer__lang-btn" href="#" role="button" id="dropdownLang" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
