--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
 					<div class="col-12">
 						<div class="hero owl-carousel" id="hero">
 							<div class="hero__slide" data-bg="img/home/slide1.jpg">
-								<h1 class="hero__title">Invest in TangibleHouse</h1>
-								<p class="hero__text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+								<h1 class="hero__title"> TangibleHouse</h1>
+								<p class="hero__text">We sell curated essentials for your kitchen & home inspired by our world adventures. We are offering 10% return on early backers of our shop. </p>
 								<div class="hero__btns">
 									<a href="item2.html" class="hero__btn hero__btn--clr">More details</a>
 									<a href="item2.html" class="hero__btn">Place a bid</a>
@@ -139,8 +139,8 @@
 							</div>
 
 							<div class="hero__slide" data-bg="img/home/slide2.jpg">
-								<h2 class="hero__title">Discover, collect, and sell <br>extraordinary NFTs</h2>
-								<p class="hero__text">Securely buy and sell unique digital collectibles. <br>Lowest transaction costs across all NFT markets guaranteed.</p>
+								<h2 class="hero__title"> Campfire Pictures</h2>
+								<p class="hero__text">Securely buy and sell unique digital collectibles. <br>Lowest transaction costs across all Contract markets guaranteed.</p>
 								<div class="hero__btns">
 									<a href="explore.html" class="hero__btn hero__btn--clr">Explore</a>
 									<a href="signin.html" class="hero__btn">Create</a>
@@ -148,8 +148,8 @@
 							</div>
 
 							<div class="hero__slide" data-bg="img/home/slide3.jpg">
-								<h2 class="hero__title">Unifund – NFT Marketplace <br>HTML Template</h2>
-								<p class="hero__text">Digital marketplace for crypto collectibles and non-fungible tokens. <br>Buy, sell, and discover exclusive digital assets.</p>
+								<h2 class="hero__title"> Anivive Lifesciences</h2>
+								<p class="hero__text">Digital marketplace for crypto collectibles and non-fungible tokens. <br>Buy, sell, and discover Contract Titles.</p>
 								<div class="hero__btns">
 									<a href="explore.html" class="hero__btn hero__btn--clr">Explore</a>
 									<a href="signin.html" class="hero__btn">Create</a>
@@ -185,7 +185,7 @@
 									<img src="img/cover/cover1.jpg" alt="">
 									<span class="card__time">15 minutes left</span>
 								</a>
-								<h3 class="card__title"><a href="item.html">Walking on Air</a></h3>
+								<h3 class="card__title"><a href="item.html">Pico</a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar5.jpg" alt="">
 									<a href="author.html">@nickname</a>
@@ -211,7 +211,7 @@
 										<span class="card__clock card__clock--1"></span>
 									</span>
 								</a>
-								<h3 class="card__title"><a href="item.html">Les Immortels, the Treachery of Artificial Shadows</a></h3>
+								<h3 class="card__title"><a href="item.html">Reframed Eyeware</a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar3.jpg" alt="">
 									<a href="author.html">@neo</a>
@@ -234,7 +234,7 @@
 									<img src="img/cover/cover3.jpg" alt="">
 									<span class="card__time">an hour left</span>
 								</a>
-								<h3 class="card__title"><a href="#modal-asset" class="open-modal">Flowers in Concrete (Modal)</a></h3>
+								<h3 class="card__title"><a href="#modal-asset" class="open-modal">Nebia Shower Tech </a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar15.jpg" alt="">
 									<a href="author.html">@min1max</a>
@@ -260,7 +260,7 @@
 										<span class="card__clock card__clock--2"></span>
 									</span>
 								</a>
-								<h3 class="card__title"><a href="item.html">Industrial Revolution</a></h3>
+								<h3 class="card__title"><a href="item.html">Tilt Lamp</a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar11.jpg" alt="">
 									<a href="author.html">@midinh</a>
@@ -283,7 +283,7 @@
 									<img src="img/cover/cover5.jpg" alt="">
 									<span class="card__time">15 minutes left</span>
 								</a>
-								<h3 class="card__title"><a href="item.html">I Love You</a></h3>
+								<h3 class="card__title"><a href="item.html">AZIO IZO</a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar10.jpg" alt="">
 									<a href="author.html">@nicky87</a>
@@ -307,7 +307,7 @@
 									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21.53,7.15a1,1,0,0,0-1,0L17,8.89A3,3,0,0,0,14,6H5A3,3,0,0,0,2,9v6a3,3,0,0,0,3,3h9a3,3,0,0,0,3-2.89l3.56,1.78A1,1,0,0,0,21,17a1,1,0,0,0,.53-.15A1,1,0,0,0,22,16V8A1,1,0,0,0,21.53,7.15ZM15,15a1,1,0,0,1-1,1H5a1,1,0,0,1-1-1V9A1,1,0,0,1,5,8h9a1,1,0,0,1,1,1Zm5-.62-3-1.5V11.12l3-1.5Z"/></svg>
 									<span class="card__time">an hour left</span>
 								</a>
-								<h3 class="card__title"><a href="item.html">Walking on Air</a></h3>
+								<h3 class="card__title"><a href="item.html">MoEa - Biosneakers</a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar8.jpg" alt="">
 									<a href="author.html">@redalert</a>
@@ -330,7 +330,7 @@
 									<img src="img/cover/cover7.jpg" alt="">
 									<span class="card__time">an hour left</span>
 								</a>
-								<h3 class="card__title"><a href="#modal-asset" class="open-modal">Tranquility (Modal)</a></h3>
+								<h3 class="card__title"><a href="#modal-asset" class="open-modal">Tetra Puzzles </a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar.jpg" alt="">
 									<a href="author.html">@aaarthur</a>
@@ -530,7 +530,7 @@
 								<a href="item.html" class="card__cover">
 									<img src="img/cover/cover1.jpg" alt="">
 								</a>
-								<h3 class="card__title"><a href="item.html">Walking on Air</a></h3>
+								<h3 class="card__title"><a href="item.html">Pico</a></h3>
 								<div class="card__author">
 									<img src="img/avatars/avatar13.jpg" alt="">
 									<a href="author.html">@nickname</a>
@@ -552,7 +552,7 @@
 								<a href="item.html" class="card__cover">
 									<img src="img/cover/cover2.jpg" alt="">
 								</a>
-								<h3 class="card__title"><a href="item.html">Les Immortels, the Treachery of Artificial Shadows</a></h3>
+								<h3 class="card__title"><a href="item.html">Reframed Eyeware</a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar10.jpg" alt="">
 									<a href="author.html">@neo</a>
@@ -574,7 +574,7 @@
 								<a href="#modal-asset" class="card__cover open-modal">
 									<img src="img/cover/cover3.jpg" alt="">
 								</a>
-								<h3 class="card__title"><a href="#modal-asset" class="open-modal">Flowers in Concrete (Modal)</a></h3>
+								<h3 class="card__title"><a href="#modal-asset" class="open-modal">Nebia Shower Tech </a></h3>
 								<div class="card__author">
 									<img src="img/avatars/avatar.jpg" alt="">
 									<a href="author.html">@min1max</a>
@@ -596,7 +596,7 @@
 								<a href="item.html" class="card__cover">
 									<img src="img/cover/cover4.jpg" alt="">
 								</a>
-								<h3 class="card__title"><a href="item.html">Industrial Revolution</a></h3>
+								<h3 class="card__title"><a href="item.html">Tilt Lamp</a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar8.jpg" alt="">
 									<a href="author.html">@midinh</a>
@@ -618,7 +618,7 @@
 								<a href="item.html" class="card__cover">
 									<img src="img/cover/cover5.jpg" alt="">
 								</a>
-								<h3 class="card__title"><a href="item.html">I Love You</a></h3>
+								<h3 class="card__title"><a href="item.html">AZIO IZO</a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar9.jpg" alt="">
 									<a href="author.html">@nicky87</a>
@@ -641,7 +641,7 @@
 									<img src="img/cover/cover6.jpg" alt="">
 									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21.53,7.15a1,1,0,0,0-1,0L17,8.89A3,3,0,0,0,14,6H5A3,3,0,0,0,2,9v6a3,3,0,0,0,3,3h9a3,3,0,0,0,3-2.89l3.56,1.78A1,1,0,0,0,21,17a1,1,0,0,0,.53-.15A1,1,0,0,0,22,16V8A1,1,0,0,0,21.53,7.15ZM15,15a1,1,0,0,1-1,1H5a1,1,0,0,1-1-1V9A1,1,0,0,1,5,8h9a1,1,0,0,1,1,1Zm5-.62-3-1.5V11.12l3-1.5Z"/></svg>
 								</a>
-								<h3 class="card__title"><a href="item.html">Walking on Air</a></h3>
+								<h3 class="card__title"><a href="item.html">Pico</a></h3>
 								<div class="card__author">
 									<img src="img/avatars/avatar14.jpg" alt="">
 									<a href="author.html">@redalert</a>
@@ -663,7 +663,7 @@
 								<a href="#modal-asset" class="card__cover open-modal">
 									<img src="img/cover/cover7.jpg" alt="">
 								</a>
-								<h3 class="card__title"><a href="#modal-asset" class="open-modal">Tranquility (Modal)</a></h3>
+								<h3 class="card__title"><a href="#modal-asset" class="open-modal">Tetra Puzzles </a></h3>
 								<div class="card__author">
 									<img src="img/avatars/avatar4.jpg" alt="">
 									<a href="author.html">@aaarthur</a>
@@ -721,7 +721,7 @@
 									<a href="author.html" class="collection__avatar collection__avatar--verified">
 										<img src="img/avatars/avatar9.jpg" alt="">
 									</a>
-									<h3 class="collection__name"><a href="collection.html">NFTheft</a></h3>
+									<h3 class="collection__name"><a href="collection.html">Contractheft</a></h3>
 									<span class="collection__number">ERC-721</span>
 								</div>
 							</div>
@@ -743,7 +743,7 @@
 									<a href="author.html" class="collection__avatar">
 										<img src="img/avatars/avatar15.jpg" alt="">
 									</a>
-									<h3 class="collection__name"><a href="collection.html">ProphecyNFT</a></h3>
+									<h3 class="collection__name"><a href="collection.html">ProphecyContract</a></h3>
 									<span class="collection__number">ERC-721</span>
 								</div>
 							</div>
@@ -776,7 +776,7 @@
 									<a href="author.html" class="collection__avatar collection__avatar--verified">
 										<img src="img/avatars/avatar15.jpg" alt="">
 									</a>
-									<h3 class="collection__name"><a href="collection.html">InventoryNFT</a></h3>
+									<h3 class="collection__name"><a href="collection.html">InventoryContract</a></h3>
 									<span class="collection__number">ERC-721</span>
 								</div>
 							</div>
