--- a/index1.html
+++ b/index1.html
@@ -19,7 +19,7 @@
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="author" content="Dmitry Volkov">
-	<title>Unifund – NFT Marketplace HTML Template</title>
+	<title>Unifund – Contract Marketplace HTML Template</title>
 
 </head>
 <body>
@@ -129,8 +129,8 @@
 				<div class="row">
 					<div class="col-12">
 						<div class="home__content">
-							<h1 class="home__title">The largest NFT marketplace</h1>
-							<p class="home__text">Digital marketplace for crypto collectibles and non-fungible tokens. <br>Buy, sell, and discover exclusive digital assets.</p>
+							<h1 class="home__title">The largest Contract marketplace</h1>
+							<p class="home__text">Digital marketplace for crypto collectibles and non-fungible tokens. <br>Buy, sell, and discover Contract Titles.</p>
 
 							<div class="home__btns">
 								<a href="explore.html" class="home__btn home__btn--clr">Explore</a>
@@ -163,7 +163,7 @@
 									<img src="img/cover/cover1.jpg" alt="">
 									<span class="card__time">15 minutes left</span>
 								</a>
-								<h3 class="card__title"><a href="item.html">Walking on Air</a></h3>
+								<h3 class="card__title"><a href="item.html">Pico</a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar5.jpg" alt="">
 									<a href="author.html">@nickname</a>
@@ -189,7 +189,7 @@
 										<span class="card__clock card__clock--1"></span>
 									</span>
 								</a>
-								<h3 class="card__title"><a href="item.html">Les Immortels, the Treachery of Artificial Shadows</a></h3>
+								<h3 class="card__title"><a href="item.html">Reframed Eyeware</a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar3.jpg" alt="">
 									<a href="author.html">@neo</a>
@@ -212,7 +212,7 @@
 									<img src="img/cover/cover3.jpg" alt="">
 									<span class="card__time">an hour left</span>
 								</a>
-								<h3 class="card__title"><a href="#modal-asset" class="open-modal">Flowers in Concrete (Modal)</a></h3>
+								<h3 class="card__title"><a href="#modal-asset" class="open-modal">Nebia Shower Tech </a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar15.jpg" alt="">
 									<a href="author.html">@min1max</a>
@@ -238,7 +238,7 @@
 										<span class="card__clock card__clock--2"></span>
 									</span>
 								</a>
-								<h3 class="card__title"><a href="item.html">Industrial Revolution</a></h3>
+								<h3 class="card__title"><a href="item.html">Tilt Lamp</a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar11.jpg" alt="">
 									<a href="author.html">@midinh</a>
@@ -261,7 +261,7 @@
 									<img src="img/cover/cover5.jpg" alt="">
 									<span class="card__time">15 minutes left</span>
 								</a>
-								<h3 class="card__title"><a href="item.html">I Love You</a></h3>
+								<h3 class="card__title"><a href="item.html">AZIO IZO</a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar10.jpg" alt="">
 									<a href="author.html">@nicky87</a>
@@ -285,7 +285,7 @@
 									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21.53,7.15a1,1,0,0,0-1,0L17,8.89A3,3,0,0,0,14,6H5A3,3,0,0,0,2,9v6a3,3,0,0,0,3,3h9a3,3,0,0,0,3-2.89l3.56,1.78A1,1,0,0,0,21,17a1,1,0,0,0,.53-.15A1,1,0,0,0,22,16V8A1,1,0,0,0,21.53,7.15ZM15,15a1,1,0,0,1-1,1H5a1,1,0,0,1-1-1V9A1,1,0,0,1,5,8h9a1,1,0,0,1,1,1Zm5-.62-3-1.5V11.12l3-1.5Z"/></svg>
 									<span class="card__time">an hour left</span>
 								</a>
-								<h3 class="card__title"><a href="item.html">Walking on Air</a></h3>
+								<h3 class="card__title"><a href="item.html">MoEa - Biosneakers</a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar8.jpg" alt="">
 									<a href="author.html">@redalert</a>
@@ -308,7 +308,7 @@
 									<img src="img/cover/cover7.jpg" alt="">
 									<span class="card__time">an hour left</span>
 								</a>
-								<h3 class="card__title"><a href="#modal-asset" class="open-modal">Tranquility (Modal)</a></h3>
+								<h3 class="card__title"><a href="#modal-asset" class="open-modal">Tetra Puzzles </a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar.jpg" alt="">
 									<a href="author.html">@aaarthur</a>
@@ -508,7 +508,7 @@
 								<a href="item.html" class="card__cover">
 									<img src="img/cover/cover1.jpg" alt="">
 								</a>
-								<h3 class="card__title"><a href="item.html">Walking on Air</a></h3>
+								<h3 class="card__title"><a href="item.html">Pico</a></h3>
 								<div class="card__author">
 									<img src="img/avatars/avatar13.jpg" alt="">
 									<a href="author.html">@nickname</a>
@@ -530,7 +530,7 @@
 								<a href="item.html" class="card__cover">
 									<img src="img/cover/cover2.jpg" alt="">
 								</a>
-								<h3 class="card__title"><a href="item.html">Les Immortels, the Treachery of Artificial Shadows</a></h3>
+								<h3 class="card__title"><a href="item.html">Reframed Eyeware</a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar10.jpg" alt="">
 									<a href="author.html">@neo</a>
@@ -552,7 +552,7 @@
 								<a href="#modal-asset" class="card__cover open-modal">
 									<img src="img/cover/cover3.jpg" alt="">
 								</a>
-								<h3 class="card__title"><a href="#modal-asset" class="open-modal">Flowers in Concrete (Modal)</a></h3>
+								<h3 class="card__title"><a href="#modal-asset" class="open-modal">Nebia Shower Tech </a></h3>
 								<div class="card__author">
 									<img src="img/avatars/avatar.jpg" alt="">
 									<a href="author.html">@min1max</a>
@@ -574,7 +574,7 @@
 								<a href="item.html" class="card__cover">
 									<img src="img/cover/cover4.jpg" alt="">
 								</a>
-								<h3 class="card__title"><a href="item.html">Industrial Revolution</a></h3>
+								<h3 class="card__title"><a href="item.html">Tilt Lamp</a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar8.jpg" alt="">
 									<a href="author.html">@midinh</a>
@@ -596,7 +596,7 @@
 								<a href="item.html" class="card__cover">
 									<img src="img/cover/cover5.jpg" alt="">
 								</a>
-								<h3 class="card__title"><a href="item.html">I Love You</a></h3>
+								<h3 class="card__title"><a href="item.html">AZIO IZO</a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar9.jpg" alt="">
 									<a href="author.html">@nicky87</a>
@@ -619,7 +619,7 @@
 									<img src="img/cover/cover6.jpg" alt="">
 									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21.53,7.15a1,1,0,0,0-1,0L17,8.89A3,3,0,0,0,14,6H5A3,3,0,0,0,2,9v6a3,3,0,0,0,3,3h9a3,3,0,0,0,3-2.89l3.56,1.78A1,1,0,0,0,21,17a1,1,0,0,0,.53-.15A1,1,0,0,0,22,16V8A1,1,0,0,0,21.53,7.15ZM15,15a1,1,0,0,1-1,1H5a1,1,0,0,1-1-1V9A1,1,0,0,1,5,8h9a1,1,0,0,1,1,1Zm5-.62-3-1.5V11.12l3-1.5Z"/></svg>
 								</a>
-								<h3 class="card__title"><a href="item.html">Walking on Air</a></h3>
+								<h3 class="card__title"><a href="item.html">Pico</a></h3>
 								<div class="card__author">
 									<img src="img/avatars/avatar14.jpg" alt="">
 									<a href="author.html">@redalert</a>
@@ -641,7 +641,7 @@
 								<a href="#modal-asset" class="card__cover open-modal">
 									<img src="img/cover/cover7.jpg" alt="">
 								</a>
-								<h3 class="card__title"><a href="#modal-asset" class="open-modal">Tranquility (Modal)</a></h3>
+								<h3 class="card__title"><a href="#modal-asset" class="open-modal">Tetra Puzzles </a></h3>
 								<div class="card__author">
 									<img src="img/avatars/avatar4.jpg" alt="">
 									<a href="author.html">@aaarthur</a>
@@ -699,7 +699,7 @@
 									<a href="author.html" class="collection__avatar collection__avatar--verified">
 										<img src="img/avatars/avatar9.jpg" alt="">
 									</a>
-									<h3 class="collection__name"><a href="collection.html">NFTheft</a></h3>
+									<h3 class="collection__name"><a href="collection.html">Contractheft</a></h3>
 									<span class="collection__number">ERC-721</span>
 								</div>
 							</div>
@@ -721,7 +721,7 @@
 									<a href="author.html" class="collection__avatar">
 										<img src="img/avatars/avatar15.jpg" alt="">
 									</a>
-									<h3 class="collection__name"><a href="collection.html">ProphecyNFT</a></h3>
+									<h3 class="collection__name"><a href="collection.html">ProphecyContract</a></h3>
 									<span class="collection__number">ERC-721</span>
 								</div>
 							</div>
@@ -754,7 +754,7 @@
 									<a href="author.html" class="collection__avatar collection__avatar--verified">
 										<img src="img/avatars/avatar15.jpg" alt="">
 									</a>
-									<h3 class="collection__name"><a href="collection.html">InventoryNFT</a></h3>
+									<h3 class="collection__name"><a href="collection.html">InventoryContract</a></h3>
 									<span class="collection__number">ERC-721</span>
 								</div>
 							</div>
@@ -773,7 +773,7 @@
 				<!-- title -->
 				<div class="col-12">
 					<div class="main__title main__title--border-top">
-						<h2>Get started creating & selling your NFTs</h2>
+						<h2>Get started creating & selling your Contracts</h2>
 					</div>
 				</div>
 				<!-- end title -->
@@ -784,7 +784,7 @@
 							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M19,7H18V6a3,3,0,0,0-3-3H5A3,3,0,0,0,2,6H2V18a3,3,0,0,0,3,3H19a3,3,0,0,0,3-3V10A3,3,0,0,0,19,7ZM5,5H15a1,1,0,0,1,1,1V7H5A1,1,0,0,1,5,5ZM20,15H19a1,1,0,0,1,0-2h1Zm0-4H19a3,3,0,0,0,0,6h1v1a1,1,0,0,1-1,1H5a1,1,0,0,1-1-1V8.83A3,3,0,0,0,5,9H19a1,1,0,0,1,1,1Z"/></svg>
 						</span>
 						<h3 class="feature__title">Set up your wallet</h3>
-						<p class="feature__text">Once you’ve set up your wallet of choice, connect it to NFT marketplace by clicking this link. <br><a href="signin.html">Connect my wallet</a>.</p>
+						<p class="feature__text">Once you’ve set up your wallet of choice, connect it to Contract marketplace by clicking this link. <br><a href="signin.html">Connect my wallet</a>.</p>
 					</div>
 				</div>
 				
@@ -803,8 +803,8 @@
 						<span class="feature__icon feature__icon--purple">
 							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M22.71,6.29a1,1,0,0,0-1.42,0L20,7.59V2a1,1,0,0,0-2,0V7.59l-1.29-1.3a1,1,0,0,0-1.42,1.42l3,3a1,1,0,0,0,.33.21.94.94,0,0,0,.76,0,1,1,0,0,0,.33-.21l3-3A1,1,0,0,0,22.71,6.29ZM19,13a1,1,0,0,0-1,1v.38L16.52,12.9a2.79,2.79,0,0,0-3.93,0l-.7.7L9.41,11.12a2.85,2.85,0,0,0-3.93,0L4,12.6V7A1,1,0,0,1,5,6h8a1,1,0,0,0,0-2H5A3,3,0,0,0,2,7V19a3,3,0,0,0,3,3H17a3,3,0,0,0,3-3V14A1,1,0,0,0,19,13ZM5,20a1,1,0,0,1-1-1V15.43l2.9-2.9a.79.79,0,0,1,1.09,0l3.17,3.17,0,0L15.46,20Zm13-1a.89.89,0,0,1-.18.53L13.31,15l.7-.7a.77.77,0,0,1,1.1,0L18,17.21Z"/></svg>
 						</span>
-						<h3 class="feature__title">Add your NFTs</h3>
-						<p class="feature__text">Upload your work, add a title and description, and customize your NFTs with Propertys, stats, and unlockable content.</p>
+						<h3 class="feature__title">Add your Contracts</h3>
+						<p class="feature__text">Upload your work, add a title and description, and customize your Contracts with Propertys, stats, and unlockable content.</p>
 					</div>
 				</div>
 
@@ -814,7 +814,7 @@
 							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M15,12a1,1,0,1,0,1-1A1,1,0,0,0,15,12Zm6.71-.71-5-5A1,1,0,0,0,16,6H5A3,3,0,0,0,2,9v6a3,3,0,0,0,3,3H16a1,1,0,0,0,.71-.29l5-5A1,1,0,0,0,21.71,11.29ZM15.59,16H5a1,1,0,0,1-1-1V9A1,1,0,0,1,5,8H15.59l4,4Z"/></svg>
 						</span>
 						<h3 class="feature__title">List them for sale</h3>
-						<p class="feature__text">Choose between auctions, fixed-price listings, and declining-price listings. You choose how you want to sell your NFTs, and we help you sell them!</p>
+						<p class="feature__text">Choose between auctions, fixed-price listings, and declining-price listings. You choose how you want to sell your Contracts, and we help you sell them!</p>
 					</div>
 				</div>
 			</div>
@@ -831,7 +831,7 @@
 					<div class="footer__logo">
 						<img src="img/logo.svg" alt="">
 					</div> 
-					<p class="footer__tagline">Digital marketplace for crypto collectibles <br>and non-fungible tokens (NFTs). <br>Buy, sell, and discover exclusive digital assets.</p>
+					<p class="footer__tagline">Digital marketplace for crypto collectibles <br>and non-fungible tokens (Contracts). <br>Buy, sell, and discover Contract Titles.</p>
 
 					<div class="footer__lang">
 						<a class="footer__lang-btn" href="#" role="button" id="dropdownLang" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
