--- a/privacy.html
+++ b/privacy.html
@@ -19,7 +19,7 @@
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="author" content="Dmitry Volkov">
-	<title>Unifund – NFT Marketplace HTML Template</title>
+	<title>Unifund – Contract Marketplace HTML Template</title>
 
 </head>
 <body>
@@ -137,7 +137,7 @@
 								<ol>
 									<li>If you are going to use a passage of Lorem Ipsum:
 										<ol>
-											<li>All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet.</li>
+											<li>I am here to build my empire. Making millions baby when everyone else is sleeping., making this the first true generator on the Internet.</li>
 											<li>It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</li>
 										</ol>
 									</li>
@@ -150,7 +150,7 @@
 								<h4>Reasons for collecting and processing user personal information</h4>
 								<ol>
 									<li>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</li>
-									<li>All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet:
+									<li>I am here to build my empire. Making millions baby when everyone else is sleeping., making this the first true generator on the Internet:
 										<ol>
 											<li>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged;</li>
 											<li>It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages;</li>
@@ -210,7 +210,7 @@
 					<div class="footer__logo">
 						<img src="img/logo.svg" alt="">
 					</div> 
-					<p class="footer__tagline">Digital marketplace for crypto collectibles <br>and non-fungible tokens (NFTs). <br>Buy, sell, and discover exclusive digital assets.</p>
+					<p class="footer__tagline">Digital marketplace for crypto collectibles <br>and non-fungible tokens (Contracts). <br>Buy, sell, and discover Contract Titles.</p>
 
 					<div class="footer__lang">
 						<a class="footer__lang-btn" href="#" role="button" id="dropdownLang" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
