--- a/explore3.html
+++ b/explore3.html
@@ -19,7 +19,7 @@
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="author" content="Dmitry Volkov">
-	<title>Unifund – NFT Marketplace HTML Template</title>
+	<title>Unifund – Contract Marketplace HTML Template</title>
 
 </head>
 <body>
@@ -127,7 +127,7 @@
 				<!-- title -->
 				<div class="col-12">
 					<div class="main__title main__title--page">
-						<h1>Explore exclusive digital assets</h1>
+						<h1>Explore Contract Titles</h1>
 					</div>
 				</div>
 				<!-- end title -->
@@ -218,7 +218,7 @@
 										<span class="card__clock card__clock--2"></span>
 									</span>
 								</a>
-								<h3 class="card__title"><a href="item.html">Walking on Air</a></h3>
+								<h3 class="card__title"><a href="item.html">Pico</a></h3>
 								<div class="card__author">
 									<img src="img/avatars/avatar.jpg" alt="">
 									<a href="author.html">@nickname</a>
@@ -247,7 +247,7 @@
 									<img src="img/cover/slide3.jpg" alt="">
 								</div>
 
-								<h3 class="card__title"><a href="item.html">To Infinity And Beyond</a></h3>
+								<h3 class="card__title"><a href="item.html">Only Good</a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar2.jpg" alt="">
 									<a href="author.html">@johndoe</a>
@@ -274,7 +274,7 @@
 									<img src="img/cover/cover2.jpg" alt="">
 									<span class="card__time">an hour left</span>
 								</a>
-								<h3 class="card__title"><a href="item.html">Les Immortels, the Treachery of Artificial Shadows</a></h3>
+								<h3 class="card__title"><a href="item.html">Reframed Eyeware</a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar3.jpg" alt="">
 									<a href="author.html">@neo</a>
@@ -301,7 +301,7 @@
 									<img src="img/cover/cover3.jpg" alt="">
 									<span class="card__time">15 minutes left</span>
 								</a>
-								<h3 class="card__title"><a href="#modal-asset" class="open-modal">Flowers in Concrete (Modal)</a></h3>
+								<h3 class="card__title"><a href="#modal-asset" class="open-modal">Nebia Shower Tech </a></h3>
 								<div class="card__author">
 									<img src="img/avatars/avatar4.jpg" alt="">
 									<a href="author.html">@min1max</a>
@@ -327,7 +327,7 @@
 								<a href="item.html" class="card__cover">
 									<img src="img/cover/cover4.jpg" alt="">
 								</a>
-								<h3 class="card__title"><a href="item.html">Industrial Revolution</a></h3>
+								<h3 class="card__title"><a href="item.html">Tilt Lamp</a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar5.jpg" alt="">
 									<a href="author.html">@midinh</a>
@@ -353,7 +353,7 @@
 								<a href="item.html" class="card__cover">
 									<img src="img/cover/cover5.jpg" alt="">
 								</a>
-								<h3 class="card__title"><a href="item.html">I Love You</a></h3>
+								<h3 class="card__title"><a href="item.html">AZIO IZO</a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar9.jpg" alt="">
 									<a href="author.html">@nicky87</a>
@@ -380,7 +380,7 @@
 									<img src="img/cover/cover6.jpg" alt="">
 									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21.53,7.15a1,1,0,0,0-1,0L17,8.89A3,3,0,0,0,14,6H5A3,3,0,0,0,2,9v6a3,3,0,0,0,3,3h9a3,3,0,0,0,3-2.89l3.56,1.78A1,1,0,0,0,21,17a1,1,0,0,0,.53-.15A1,1,0,0,0,22,16V8A1,1,0,0,0,21.53,7.15ZM15,15a1,1,0,0,1-1,1H5a1,1,0,0,1-1-1V9A1,1,0,0,1,5,8h9a1,1,0,0,1,1,1Zm5-.62-3-1.5V11.12l3-1.5Z"/></svg>
 								</a>
-								<h3 class="card__title"><a href="item.html">Walking on Air</a></h3>
+								<h3 class="card__title"><a href="item.html">MoEa - Biosneakers</a></h3>
 								<div class="card__author">
 									<img src="img/avatars/avatar10.jpg" alt="">
 									<a href="author.html">@redalert</a>
@@ -407,7 +407,7 @@
 									<img src="img/cover/cover7.jpg" alt="">
 									<span class="card__time">15 minutes left</span>
 								</a>
-								<h3 class="card__title"><a href="item.html">Tranquility</a></h3>
+								<h3 class="card__title"><a href="item.html">Tetra Puzzles</a></h3>
 								<div class="card__author">
 									<img src="img/avatars/avatar11.jpg" alt="">
 									<a href="author.html">@aaarthur</a>
@@ -437,7 +437,7 @@
 										<span class="card__clock card__clock--1"></span>
 									</span>
 								</a>
-								<h3 class="card__title"><a href="item.html">To Infinity And Beyond</a></h3>
+								<h3 class="card__title"><a href="item.html">Only Good</a></h3>
 								<div class="card__author">
 									<img src="img/avatars/avatar.jpg" alt="">
 									<a href="author.html">@nickname</a>
@@ -495,7 +495,7 @@
 					<div class="footer__logo">
 						<img src="img/logo.svg" alt="">
 					</div> 
-					<p class="footer__tagline">Digital marketplace for crypto collectibles <br>and non-fungible tokens (NFTs). <br>Buy, sell, and discover exclusive digital assets.</p>
+					<p class="footer__tagline">Digital marketplace for crypto collectibles <br>and non-fungible tokens (Contracts). <br>Buy, sell, and discover Contract Titles.</p>
 
 					<div class="footer__lang">
 						<a class="footer__lang-btn" href="#" role="button" id="dropdownLang" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
