--- a/index2.html
+++ b/index2.html
@@ -19,7 +19,7 @@
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="author" content="Dmitry Volkov">
-	<title>Unifund – NFT Marketplace HTML Template</title>
+	<title>Unifund – Contract Marketplace HTML Template</title>
 
 </head>
 <body>
@@ -119,7 +119,7 @@
 				<div class="row">
 					<div class="col-12">
 						<div class="home__content home__content--center">
-							<h1 class="home__title">Discover, collect, and sell <br>extraordinary <span><b>NFTs</b></span></h1>
+							<h1 class="home__title">Discover, collect, and sell <br>extraordinary <span><b>Contracts</b></span></h1>
 							<p class="home__text">Digital marketplace for crypto collectibles and non-fungible tokens.</p>
 
 							<div class="home__btns">
@@ -139,7 +139,7 @@
 				<!-- title -->
 				<div class="col-12">
 					<div class="main__title main__title--center">
-						<h2>Explore exclusive digital assets</h2>
+						<h2>Explore Contract Titles</h2>
 					</div>
 				</div>
 				<!-- end title -->
@@ -150,7 +150,7 @@
 						<a href="item.html" class="card__cover">
 							<img src="img/cover/cover1.jpg" alt="">
 						</a>
-						<h3 class="card__title"><a href="item.html">Walking on Air</a></h3>
+						<h3 class="card__title"><a href="item.html">Pico</a></h3>
 						<div class="card__author">
 							<img src="img/avatars/avatar.jpg" alt="">
 							<a href="author.html">@nickname</a>
@@ -179,7 +179,7 @@
 							<img src="img/cover/slide3.jpg" alt="">
 						</div>
 
-						<h3 class="card__title"><a href="item.html">To Infinity And Beyond</a></h3>
+						<h3 class="card__title"><a href="item.html">Only Good</a></h3>
 						<div class="card__author card__author--verified">
 							<img src="img/avatars/avatar2.jpg" alt="">
 							<a href="author.html">@johndoe</a>
@@ -205,7 +205,7 @@
 						<a href="item.html" class="card__cover">
 							<img src="img/cover/cover2.jpg" alt="">
 						</a>
-						<h3 class="card__title"><a href="item.html">Les Immortels, the Treachery of Artificial Shadows</a></h3>
+						<h3 class="card__title"><a href="item.html">Reframed Eyeware</a></h3>
 						<div class="card__author card__author--verified">
 							<img src="img/avatars/avatar3.jpg" alt="">
 							<a href="author.html">@neo</a>
@@ -231,7 +231,7 @@
 						<a href="#modal-asset" class="card__cover open-modal">
 							<img src="img/cover/cover3.jpg" alt="">
 						</a>
-						<h3 class="card__title"><a href="#modal-asset" class="open-modal">Flowers in Concrete (Modal)</a></h3>
+						<h3 class="card__title"><a href="#modal-asset" class="open-modal">Nebia Shower Tech </a></h3>
 						<div class="card__author">
 							<img src="img/avatars/avatar4.jpg" alt="">
 							<a href="author.html">@min1max</a>
@@ -257,7 +257,7 @@
 						<a href="item.html" class="card__cover">
 							<img src="img/cover/cover4.jpg" alt="">
 						</a>
-						<h3 class="card__title"><a href="item.html">Industrial Revolution</a></h3>
+						<h3 class="card__title"><a href="item.html">Tilt Lamp</a></h3>
 						<div class="card__author card__author--verified">
 							<img src="img/avatars/avatar5.jpg" alt="">
 							<a href="author.html">@midinh</a>
@@ -283,7 +283,7 @@
 						<a href="item.html" class="card__cover">
 							<img src="img/cover/cover5.jpg" alt="">
 						</a>
-						<h3 class="card__title"><a href="item.html">I Love You</a></h3>
+						<h3 class="card__title"><a href="item.html">AZIO IZO</a></h3>
 						<div class="card__author card__author--verified">
 							<img src="img/avatars/avatar9.jpg" alt="">
 							<a href="author.html">@nicky87</a>
@@ -310,7 +310,7 @@
 							<img src="img/cover/cover6.jpg" alt="">
 							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21.53,7.15a1,1,0,0,0-1,0L17,8.89A3,3,0,0,0,14,6H5A3,3,0,0,0,2,9v6a3,3,0,0,0,3,3h9a3,3,0,0,0,3-2.89l3.56,1.78A1,1,0,0,0,21,17a1,1,0,0,0,.53-.15A1,1,0,0,0,22,16V8A1,1,0,0,0,21.53,7.15ZM15,15a1,1,0,0,1-1,1H5a1,1,0,0,1-1-1V9A1,1,0,0,1,5,8h9a1,1,0,0,1,1,1Zm5-.62-3-1.5V11.12l3-1.5Z"/></svg>
 						</a>
-						<h3 class="card__title"><a href="item.html">Walking on Air</a></h3>
+						<h3 class="card__title"><a href="item.html">MoEa - Biosneakers</a></h3>
 						<div class="card__author">
 							<img src="img/avatars/avatar10.jpg" alt="">
 							<a href="author.html">@redalert</a>
@@ -336,7 +336,7 @@
 						<a href="item.html" class="card__cover">
 							<img src="img/cover/cover7.jpg" alt="">
 						</a>
-						<h3 class="card__title"><a href="item.html">Tranquility</a></h3>
+						<h3 class="card__title"><a href="item.html">Tetra Puzzles</a></h3>
 						<div class="card__author">
 							<img src="img/avatars/avatar11.jpg" alt="">
 							<a href="author.html">@aaarthur</a>
@@ -365,7 +365,7 @@
 								<a href="item.html" class="card__cover">
 									<img src="img/cover/cover1.jpg" alt="">
 								</a>
-								<h3 class="card__title"><a href="item.html">Walking on Air</a></h3>
+								<h3 class="card__title"><a href="item.html">Pico</a></h3>
 								<div class="card__author">
 									<img src="img/avatars/avatar.jpg" alt="">
 									<a href="author.html">@nickname</a>
@@ -392,7 +392,7 @@
 									<img src="img/cover/cover8.jpg" alt="">
 								</a>
 
-								<h3 class="card__title"><a href="item.html">To Infinity And Beyond</a></h3>
+								<h3 class="card__title"><a href="item.html">Only Good</a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar2.jpg" alt="">
 									<a href="author.html">@johndoe</a>
@@ -418,7 +418,7 @@
 								<a href="item.html" class="card__cover">
 									<img src="img/cover/cover2.jpg" alt="">
 								</a>
-								<h3 class="card__title"><a href="item.html">Les Immortels, the Treachery of Artificial Shadows</a></h3>
+								<h3 class="card__title"><a href="item.html">Reframed Eyeware</a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar3.jpg" alt="">
 									<a href="author.html">@neo</a>
@@ -444,7 +444,7 @@
 								<a href="#modal-asset" class="card__cover open-modal">
 									<img src="img/cover/cover3.jpg" alt="">
 								</a>
-								<h3 class="card__title"><a href="#modal-asset" class="open-modal">Flowers in Concrete (Modal)</a></h3>
+								<h3 class="card__title"><a href="#modal-asset" class="open-modal">Nebia Shower Tech </a></h3>
 								<div class="card__author">
 									<img src="img/avatars/avatar4.jpg" alt="">
 									<a href="author.html">@min1max</a>
@@ -470,7 +470,7 @@
 								<a href="item.html" class="card__cover">
 									<img src="img/cover/cover4.jpg" alt="">
 								</a>
-								<h3 class="card__title"><a href="item.html">Industrial Revolution</a></h3>
+								<h3 class="card__title"><a href="item.html">Tilt Lamp</a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar5.jpg" alt="">
 									<a href="author.html">@midinh</a>
@@ -496,7 +496,7 @@
 								<a href="item.html" class="card__cover">
 									<img src="img/cover/cover5.jpg" alt="">
 								</a>
-								<h3 class="card__title"><a href="item.html">I Love You</a></h3>
+								<h3 class="card__title"><a href="item.html">AZIO IZO</a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar9.jpg" alt="">
 									<a href="author.html">@nicky87</a>
@@ -523,7 +523,7 @@
 									<img src="img/cover/cover6.jpg" alt="">
 									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21.53,7.15a1,1,0,0,0-1,0L17,8.89A3,3,0,0,0,14,6H5A3,3,0,0,0,2,9v6a3,3,0,0,0,3,3h9a3,3,0,0,0,3-2.89l3.56,1.78A1,1,0,0,0,21,17a1,1,0,0,0,.53-.15A1,1,0,0,0,22,16V8A1,1,0,0,0,21.53,7.15ZM15,15a1,1,0,0,1-1,1H5a1,1,0,0,1-1-1V9A1,1,0,0,1,5,8h9a1,1,0,0,1,1,1Zm5-.62-3-1.5V11.12l3-1.5Z"/></svg>
 								</a>
-								<h3 class="card__title"><a href="item.html">Walking on Air</a></h3>
+								<h3 class="card__title"><a href="item.html">Pico</a></h3>
 								<div class="card__author">
 									<img src="img/avatars/avatar10.jpg" alt="">
 									<a href="author.html">@redalert</a>
@@ -549,7 +549,7 @@
 								<a href="item.html" class="card__cover">
 									<img src="img/cover/cover7.jpg" alt="">
 								</a>
-								<h3 class="card__title"><a href="item.html">Tranquility</a></h3>
+								<h3 class="card__title"><a href="item.html">Tetra Puzzles</a></h3>
 								<div class="card__author">
 									<img src="img/avatars/avatar11.jpg" alt="">
 									<a href="author.html">@aaarthur</a>
@@ -597,7 +597,7 @@
 									<img src="img/cover/cover1.jpg" alt="">
 									<span class="card__time">15 minutes left</span>
 								</a>
-								<h3 class="card__title"><a href="item.html">Walking on Air</a></h3>
+								<h3 class="card__title"><a href="item.html">Pico</a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar5.jpg" alt="">
 									<a href="author.html">@nickname</a>
@@ -620,7 +620,7 @@
 									<img src="img/cover/cover2.jpg" alt="">
 									<span class="card__time">15 minutes left</span>
 								</a>
-								<h3 class="card__title"><a href="item.html">Les Immortels, the Treachery of Artificial Shadows</a></h3>
+								<h3 class="card__title"><a href="item.html">Reframed Eyeware</a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar3.jpg" alt="">
 									<a href="author.html">@neo</a>
@@ -643,7 +643,7 @@
 									<img src="img/cover/cover3.jpg" alt="">
 									<span class="card__time">an hour left</span>
 								</a>
-								<h3 class="card__title"><a href="#modal-asset" class="open-modal">Flowers in Concrete (Modal)</a></h3>
+								<h3 class="card__title"><a href="#modal-asset" class="open-modal">Nebia Shower Tech </a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar15.jpg" alt="">
 									<a href="author.html">@min1max</a>
@@ -669,7 +669,7 @@
 										<span class="card__clock card__clock--1"></span>
 									</span>
 								</a>
-								<h3 class="card__title"><a href="item.html">Industrial Revolution</a></h3>
+								<h3 class="card__title"><a href="item.html">Tilt Lamp</a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar11.jpg" alt="">
 									<a href="author.html">@midinh</a>
@@ -692,7 +692,7 @@
 									<img src="img/cover/cover5.jpg" alt="">
 									<span class="card__time">15 minutes left</span>
 								</a>
-								<h3 class="card__title"><a href="item.html">I Love You</a></h3>
+								<h3 class="card__title"><a href="item.html">AZIO IZO</a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar10.jpg" alt="">
 									<a href="author.html">@nicky87</a>
@@ -719,7 +719,7 @@
 										<span class="card__clock card__clock--2"></span>
 									</span>
 								</a>
-								<h3 class="card__title"><a href="item.html">Walking on Air</a></h3>
+								<h3 class="card__title"><a href="item.html">Pico</a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar8.jpg" alt="">
 									<a href="author.html">@redalert</a>
@@ -742,7 +742,7 @@
 									<img src="img/cover/cover7.jpg" alt="">
 									<span class="card__time">an hour left</span>
 								</a>
-								<h3 class="card__title"><a href="#modal-asset" class="open-modal">Tranquility (Modal)</a></h3>
+								<h3 class="card__title"><a href="#modal-asset" class="open-modal">Tetra Puzzles </a></h3>
 								<div class="card__author card__author--verified">
 									<img src="img/avatars/avatar.jpg" alt="">
 									<a href="author.html">@aaarthur</a>
@@ -790,7 +790,7 @@
 
 						<div class="post__content">
 							<a href="#" class="post__category">Charity</a>
-							<h3 class="post__title"><a href="article.html">Save Thousands Of Lives Through This NFT</a></h3>
+							<h3 class="post__title"><a href="article.html">Save Thousands Of Lives Through This Contract</a></h3>
 							<div class="post__meta">
 								<span class="post__date"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12,2A10,10,0,1,0,22,12,10.01114,10.01114,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8.00917,8.00917,0,0,1,12,20ZM14.09814,9.63379,13,10.26807V7a1,1,0,0,0-2,0v5a1.00025,1.00025,0,0,0,1.5.86621l2.59814-1.5a1.00016,1.00016,0,1,0-1-1.73242Z"/></svg> April 25, 2021</span>
 								<span class="post__comments"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17,9H7a1,1,0,0,0,0,2H17a1,1,0,0,0,0-2Zm-4,4H7a1,1,0,0,0,0,2h6a1,1,0,0,0,0-2ZM12,2A10,10,0,0,0,2,12a9.89,9.89,0,0,0,2.26,6.33l-2,2a1,1,0,0,0-.21,1.09A1,1,0,0,0,3,22h9A10,10,0,0,0,12,2Zm0,18H5.41l.93-.93a1,1,0,0,0,0-1.41A8,8,0,1,1,12,20Z"/></svg> 119</span>
@@ -828,7 +828,7 @@
 
 						<div class="post__content">
 							<a href="#" class="post__category">Digital Art</a>
-							<h3 class="post__title"><a href="article.html">The beginners guide to creating & selling digital art NFTs</a></h3>
+							<h3 class="post__title"><a href="article.html">The beginners guide to creating & selling digital art Contracts</a></h3>
 							<div class="post__meta">
 								<span class="post__date"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12,2A10,10,0,1,0,22,12,10.01114,10.01114,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8.00917,8.00917,0,0,1,12,20ZM14.09814,9.63379,13,10.26807V7a1,1,0,0,0-2,0v5a1.00025,1.00025,0,0,0,1.5.86621l2.59814-1.5a1.00016,1.00016,0,1,0-1-1.73242Z"/></svg> April 22, 2021</span>
 								<span class="post__comments"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M17,9H7a1,1,0,0,0,0,2H17a1,1,0,0,0,0-2Zm-4,4H7a1,1,0,0,0,0,2h6a1,1,0,0,0,0-2ZM12,2A10,10,0,0,0,2,12a9.89,9.89,0,0,0,2.26,6.33l-2,2a1,1,0,0,0-.21,1.09A1,1,0,0,0,3,22h9A10,10,0,0,0,12,2Zm0,18H5.41l.93-.93a1,1,0,0,0,0-1.41A8,8,0,1,1,12,20Z"/></svg> 54</span>
@@ -883,7 +883,7 @@
 					<div class="footer__logo">
 						<img src="img/logo.svg" alt="">
 					</div> 
-					<p class="footer__tagline">Digital marketplace for crypto collectibles <br>and non-fungible tokens (NFTs). <br>Buy, sell, and discover exclusive digital assets.</p>
+					<p class="footer__tagline">Digital marketplace for crypto collectibles <br>and non-fungible tokens (Contracts). <br>Buy, sell, and discover Contract Titles.</p>
 
 					<div class="footer__lang">
 						<a class="footer__lang-btn" href="#" role="button" id="dropdownLang" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
