--- a/index3.html
+++ b/index3.html
@@ -19,7 +19,7 @@
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="author" content="Dmitry Volkov">
-	<title>Unifund – NFT Marketplace HTML Template</title>
+	<title>Unifund – Contract Marketplace HTML Template</title>
 
 </head>
 <body>
@@ -120,7 +120,7 @@
 					<div class="col-12">
 						<div class="hero owl-carousel" id="hero">
 							<div class="hero__slide" data-bg="img/home/slide1.jpg">
-								<h1 class="hero__title">Exclusive digital asset</h1>
+								<h1 class="hero__title">Contract Title</h1>
 								<p class="hero__text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
 								<div class="hero__btns">
 									<a href="item2.html" class="hero__btn hero__btn--clr">More details</a>
@@ -129,8 +129,8 @@
 							</div>
 
 							<div class="hero__slide" data-bg="img/home/slide2.jpg">
-								<h2 class="hero__title">Discover, collect, and sell <br>extraordinary NFTs</h2>
-								<p class="hero__text">Securely buy and sell unique digital collectibles. <br>Lowest transaction costs across all NFT markets guaranteed.</p>
+								<h2 class="hero__title"> Campfire Pictures</h2>
+								<p class="hero__text">Securely buy and sell unique digital collectibles. <br>Lowest transaction costs across all Contract markets guaranteed.</p>
 								<div class="hero__btns">
 									<a href="explore.html" class="hero__btn hero__btn--clr">Explore</a>
 									<a href="signin.html" class="hero__btn">Create</a>
@@ -138,8 +138,8 @@
 							</div>
 
 							<div class="hero__slide" data-bg="img/home/slide3.jpg">
-								<h2 class="hero__title">Unifund – NFT Marketplace <br>HTML Template</h2>
-								<p class="hero__text">Digital marketplace for crypto collectibles and non-fungible tokens. <br>Buy, sell, and discover exclusive digital assets.</p>
+								<h2 class="hero__title"> Anivive Lifesciences</h2>
+								<p class="hero__text">Digital marketplace for crypto collectibles and non-fungible tokens. <br>Buy, sell, and discover Contract Titles.</p>
 								<div class="hero__btns">
 									<a href="explore.html" class="hero__btn hero__btn--clr">Explore</a>
 									<a href="signin.html" class="hero__btn">Create</a>
@@ -161,7 +161,7 @@
 				<!-- title -->
 				<div class="col-12">
 					<div class="main__title">
-						<h2>Explore exclusive digital assets</h2>
+						<h2>Explore Contract Titles</h2>
 					</div>
 				</div>
 				<!-- end title -->
@@ -203,7 +203,7 @@
 												<span class="card__clock card__clock--2"></span>
 											</span>
 										</a>
-										<h3 class="card__title"><a href="item.html">Walking on Air</a></h3>
+										<h3 class="card__title"><a href="item.html">Pico</a></h3>
 										<div class="card__author">
 											<img src="img/avatars/avatar.jpg" alt="">
 											<a href="author.html">@nickname</a>
@@ -232,7 +232,7 @@
 											<img src="img/cover/slide3.jpg" alt="">
 										</div>
 
-										<h3 class="card__title"><a href="item.html">To Infinity And Beyond</a></h3>
+										<h3 class="card__title"><a href="item.html">Only Good</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar2.jpg" alt="">
 											<a href="author.html">@johndoe</a>
@@ -262,7 +262,7 @@
 												<span class="card__clock card__clock--1"></span>
 											</span>
 										</a>
-										<h3 class="card__title"><a href="item.html">Les Immortels, the Treachery of Artificial Shadows</a></h3>
+										<h3 class="card__title"><a href="item.html">Reframed Eyeware</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar3.jpg" alt="">
 											<a href="author.html">@neo</a>
@@ -288,7 +288,7 @@
 										<a href="#modal-asset" class="card__cover open-modal">
 											<img src="img/cover/cover3.jpg" alt="">
 										</a>
-										<h3 class="card__title"><a href="#modal-asset" class="open-modal">Flowers in Concrete (Modal)</a></h3>
+										<h3 class="card__title"><a href="#modal-asset" class="open-modal">Nebia Shower Tech </a></h3>
 										<div class="card__author">
 											<img src="img/avatars/avatar4.jpg" alt="">
 											<a href="author.html">@min1max</a>
@@ -314,7 +314,7 @@
 										<a href="item.html" class="card__cover">
 											<img src="img/cover/cover4.jpg" alt="">
 										</a>
-										<h3 class="card__title"><a href="item.html">Industrial Revolution</a></h3>
+										<h3 class="card__title"><a href="item.html">Tilt Lamp</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
 											<a href="author.html">@midinh</a>
@@ -341,7 +341,7 @@
 											<img src="img/cover/cover5.jpg" alt="">
 											<span class="card__time">15 minutes left</span>
 										</a>
-										<h3 class="card__title"><a href="item.html">I Love You</a></h3>
+										<h3 class="card__title"><a href="item.html">AZIO IZO</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar9.jpg" alt="">
 											<a href="author.html">@nicky87</a>
@@ -368,7 +368,7 @@
 											<img src="img/cover/cover6.jpg" alt="">
 											<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21.53,7.15a1,1,0,0,0-1,0L17,8.89A3,3,0,0,0,14,6H5A3,3,0,0,0,2,9v6a3,3,0,0,0,3,3h9a3,3,0,0,0,3-2.89l3.56,1.78A1,1,0,0,0,21,17a1,1,0,0,0,.53-.15A1,1,0,0,0,22,16V8A1,1,0,0,0,21.53,7.15ZM15,15a1,1,0,0,1-1,1H5a1,1,0,0,1-1-1V9A1,1,0,0,1,5,8h9a1,1,0,0,1,1,1Zm5-.62-3-1.5V11.12l3-1.5Z"/></svg>
 										</a>
-										<h3 class="card__title"><a href="item.html">Walking on Air</a></h3>
+										<h3 class="card__title"><a href="item.html">MoEa - Biosneakers</a></h3>
 										<div class="card__author">
 											<img src="img/avatars/avatar10.jpg" alt="">
 											<a href="author.html">@redalert</a>
@@ -394,7 +394,7 @@
 										<a href="item.html" class="card__cover">
 											<img src="img/cover/cover7.jpg" alt="">
 										</a>
-										<h3 class="card__title"><a href="item.html">Tranquility</a></h3>
+										<h3 class="card__title"><a href="item.html">Tetra Puzzles</a></h3>
 										<div class="card__author">
 											<img src="img/avatars/avatar11.jpg" alt="">
 											<a href="author.html">@aaarthur</a>
@@ -447,7 +447,7 @@
 										<a href="item.html" class="card__cover">
 											<img src="img/cover/cover7.jpg" alt="">
 										</a>
-										<h3 class="card__title"><a href="item.html">Walking on Air</a></h3>
+										<h3 class="card__title"><a href="item.html">Pico</a></h3>
 										<div class="card__author">
 											<img src="img/avatars/avatar.jpg" alt="">
 											<a href="author.html">@nickname</a>
@@ -473,7 +473,7 @@
 										<a href="item.html" class="card__cover">
 											<img src="img/cover/cover6.jpg" alt="">
 										</a>
-										<h3 class="card__title"><a href="item.html">Les Immortels, the Treachery of Artificial Shadows</a></h3>
+										<h3 class="card__title"><a href="item.html">Reframed Eyeware</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar3.jpg" alt="">
 											<a href="author.html">@neo</a>
@@ -500,7 +500,7 @@
 											<img src="img/cover/cover8.jpg" alt="">
 											<span class="card__time">15 minutes left</span>
 										</a>
-										<h3 class="card__title"><a href="item.html">To Infinity And Beyond</a></h3>
+										<h3 class="card__title"><a href="item.html">Only Good</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar2.jpg" alt="">
 											<a href="author.html">@johndoe</a>
@@ -526,7 +526,7 @@
 										<a href="item.html" class="card__cover">
 											<img src="img/cover/cover5.jpg" alt="">
 										</a>
-										<h3 class="card__title"><a href="item.html">Flowers in Concrete</a></h3>
+										<h3 class="card__title"><a href="item.html">Nebia Shower Tech</a></h3>
 										<div class="card__author">
 											<img src="img/avatars/avatar4.jpg" alt="">
 											<a href="author.html">@min1max</a>
@@ -552,7 +552,7 @@
 										<a href="item.html" class="card__cover">
 											<img src="img/cover/cover4.jpg" alt="">
 										</a>
-										<h3 class="card__title"><a href="item.html">Industrial Revolution</a></h3>
+										<h3 class="card__title"><a href="item.html">Tilt Lamp</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
 											<a href="author.html">@midinh</a>
@@ -578,7 +578,7 @@
 										<a href="item.html" class="card__cover">
 											<img src="img/cover/cover3.jpg" alt="">
 										</a>
-										<h3 class="card__title"><a href="item.html">I Love You</a></h3>
+										<h3 class="card__title"><a href="item.html">AZIO IZO</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar9.jpg" alt="">
 											<a href="author.html">@nicky87</a>
@@ -605,7 +605,7 @@
 											<img src="img/cover/cover2.jpg" alt="">
 											<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21.53,7.15a1,1,0,0,0-1,0L17,8.89A3,3,0,0,0,14,6H5A3,3,0,0,0,2,9v6a3,3,0,0,0,3,3h9a3,3,0,0,0,3-2.89l3.56,1.78A1,1,0,0,0,21,17a1,1,0,0,0,.53-.15A1,1,0,0,0,22,16V8A1,1,0,0,0,21.53,7.15ZM15,15a1,1,0,0,1-1,1H5a1,1,0,0,1-1-1V9A1,1,0,0,1,5,8h9a1,1,0,0,1,1,1Zm5-.62-3-1.5V11.12l3-1.5Z"/></svg>
 										</a>
-										<h3 class="card__title"><a href="item.html">Walking on Air</a></h3>
+										<h3 class="card__title"><a href="item.html">Pico</a></h3>
 										<div class="card__author">
 											<img src="img/avatars/avatar10.jpg" alt="">
 											<a href="author.html">@redalert</a>
@@ -632,7 +632,7 @@
 											<img src="img/cover/cover1.jpg" alt="">
 											<span class="card__time">15 minutes left</span>
 										</a>
-										<h3 class="card__title"><a href="item.html">Tranquility</a></h3>
+										<h3 class="card__title"><a href="item.html">Tetra Puzzles</a></h3>
 										<div class="card__author">
 											<img src="img/avatars/avatar11.jpg" alt="">
 											<a href="author.html">@aaarthur</a>
@@ -686,7 +686,7 @@
 											<img src="img/cover/cover3.jpg" alt="">
 											<span class="card__time">an hour left</span>
 										</a>
-										<h3 class="card__title"><a href="item.html">Walking on Air</a></h3>
+										<h3 class="card__title"><a href="item.html">Pico</a></h3>
 										<div class="card__author">
 											<img src="img/avatars/avatar.jpg" alt="">
 											<a href="author.html">@nickname</a>
@@ -712,7 +712,7 @@
 										<a href="item.html" class="card__cover">
 											<img src="img/cover/cover2.jpg" alt="">
 										</a>
-										<h3 class="card__title"><a href="item.html">Les Immortels, the Treachery of Artificial Shadows</a></h3>
+										<h3 class="card__title"><a href="item.html">Reframed Eyeware</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar3.jpg" alt="">
 											<a href="author.html">@neo</a>
@@ -738,7 +738,7 @@
 										<a href="item.html" class="card__cover">
 											<img src="img/cover/cover1.jpg" alt="">
 										</a>
-										<h3 class="card__title"><a href="#">To Infinity And Beyond</a></h3>
+										<h3 class="card__title"><a href="#">Only Good</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar2.jpg" alt="">
 											<a href="author.html">@johndoe</a>
@@ -764,7 +764,7 @@
 										<a href="#" class="card__cover">
 											<img src="img/cover/cover4.jpg" alt="">
 										</a>
-										<h3 class="card__title"><a href="#">Flowers in Concrete (Modal)</a></h3>
+										<h3 class="card__title"><a href="#">Nebia Shower Tech </a></h3>
 										<div class="card__author">
 											<img src="img/avatars/avatar4.jpg" alt="">
 											<a href="author.html">@min1max</a>
@@ -790,7 +790,7 @@
 										<a href="item.html" class="card__cover">
 											<img src="img/cover/cover5.jpg" alt="">
 										</a>
-										<h3 class="card__title"><a href="item.html">Industrial Revolution</a></h3>
+										<h3 class="card__title"><a href="item.html">Tilt Lamp</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
 											<a href="author.html">@midinh</a>
@@ -816,7 +816,7 @@
 										<a href="item.html" class="card__cover">
 											<img src="img/cover/cover6.jpg" alt="">
 										</a>
-										<h3 class="card__title"><a href="item.html">I Love You</a></h3>
+										<h3 class="card__title"><a href="item.html">AZIO IZO</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar9.jpg" alt="">
 											<a href="author.html">@nicky87</a>
@@ -843,7 +843,7 @@
 											<img src="img/cover/cover7.jpg" alt="">
 											<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21.53,7.15a1,1,0,0,0-1,0L17,8.89A3,3,0,0,0,14,6H5A3,3,0,0,0,2,9v6a3,3,0,0,0,3,3h9a3,3,0,0,0,3-2.89l3.56,1.78A1,1,0,0,0,21,17a1,1,0,0,0,.53-.15A1,1,0,0,0,22,16V8A1,1,0,0,0,21.53,7.15ZM15,15a1,1,0,0,1-1,1H5a1,1,0,0,1-1-1V9A1,1,0,0,1,5,8h9a1,1,0,0,1,1,1Zm5-.62-3-1.5V11.12l3-1.5Z"/></svg>
 										</a>
-										<h3 class="card__title"><a href="item.html">Walking on Air</a></h3>
+										<h3 class="card__title"><a href="item.html">Pico</a></h3>
 										<div class="card__author">
 											<img src="img/avatars/avatar10.jpg" alt="">
 											<a href="author.html">@redalert</a>
@@ -869,7 +869,7 @@
 										<a href="item.html" class="card__cover">
 											<img src="img/cover/cover8.jpg" alt="">
 										</a>
-										<h3 class="card__title"><a href="item.html">Tranquility</a></h3>
+										<h3 class="card__title"><a href="item.html">Tetra Puzzles</a></h3>
 										<div class="card__author">
 											<img src="img/avatars/avatar11.jpg" alt="">
 											<a href="author.html">@aaarthur</a>
@@ -922,7 +922,7 @@
 										<a href="item.html" class="card__cover">
 											<img src="img/cover/cover7.jpg" alt="">
 										</a>
-										<h3 class="card__title"><a href="item.html">Walking on Air</a></h3>
+										<h3 class="card__title"><a href="item.html">Pico</a></h3>
 										<div class="card__author">
 											<img src="img/avatars/avatar.jpg" alt="">
 											<a href="author.html">@nickname</a>
@@ -949,7 +949,7 @@
 											<img src="img/cover/cover6.jpg" alt="">
 											<span class="card__time">15 minutes left</span>
 										</a>
-										<h3 class="card__title"><a href="item.html">Les Immortels, the Treachery of Artificial Shadows</a></h3>
+										<h3 class="card__title"><a href="item.html">Reframed Eyeware</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar3.jpg" alt="">
 											<a href="author.html">@neo</a>
@@ -975,7 +975,7 @@
 										<a href="item.html" class="card__cover">
 											<img src="img/cover/cover8.jpg" alt="">
 										</a>
-										<h3 class="card__title"><a href="#">To Infinity And Beyond</a></h3>
+										<h3 class="card__title"><a href="#">Only Good</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar2.jpg" alt="">
 											<a href="author.html">@johndoe</a>
@@ -1001,7 +1001,7 @@
 										<a href="#" class="card__cover">
 											<img src="img/cover/cover5.jpg" alt="">
 										</a>
-										<h3 class="card__title"><a href="#">Flowers in Concrete (Modal)</a></h3>
+										<h3 class="card__title"><a href="#">Nebia Shower Tech </a></h3>
 										<div class="card__author">
 											<img src="img/avatars/avatar4.jpg" alt="">
 											<a href="author.html">@min1max</a>
@@ -1027,7 +1027,7 @@
 										<a href="item.html" class="card__cover">
 											<img src="img/cover/cover4.jpg" alt="">
 										</a>
-										<h3 class="card__title"><a href="item.html">Industrial Revolution</a></h3>
+										<h3 class="card__title"><a href="item.html">Tilt Lamp</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar5.jpg" alt="">
 											<a href="author.html">@midinh</a>
@@ -1053,7 +1053,7 @@
 										<a href="item.html" class="card__cover">
 											<img src="img/cover/cover3.jpg" alt="">
 										</a>
-										<h3 class="card__title"><a href="item.html">I Love You</a></h3>
+										<h3 class="card__title"><a href="item.html">AZIO IZO</a></h3>
 										<div class="card__author card__author--verified">
 											<img src="img/avatars/avatar9.jpg" alt="">
 											<a href="author.html">@nicky87</a>
@@ -1080,7 +1080,7 @@
 											<img src="img/cover/cover2.jpg" alt="">
 											<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21.53,7.15a1,1,0,0,0-1,0L17,8.89A3,3,0,0,0,14,6H5A3,3,0,0,0,2,9v6a3,3,0,0,0,3,3h9a3,3,0,0,0,3-2.89l3.56,1.78A1,1,0,0,0,21,17a1,1,0,0,0,.53-.15A1,1,0,0,0,22,16V8A1,1,0,0,0,21.53,7.15ZM15,15a1,1,0,0,1-1,1H5a1,1,0,0,1-1-1V9A1,1,0,0,1,5,8h9a1,1,0,0,1,1,1Zm5-.62-3-1.5V11.12l3-1.5Z"/></svg>
 										</a>
-										<h3 class="card__title"><a href="item.html">Walking on Air</a></h3>
+										<h3 class="card__title"><a href="item.html">Pico</a></h3>
 										<div class="card__author">
 											<img src="img/avatars/avatar10.jpg" alt="">
 											<a href="author.html">@redalert</a>
@@ -1106,7 +1106,7 @@
 										<a href="item.html" class="card__cover">
 											<img src="img/cover/cover1.jpg" alt="">
 										</a>
-										<h3 class="card__title"><a href="item.html">Tranquility</a></h3>
+										<h3 class="card__title"><a href="item.html">Tetra Puzzles</a></h3>
 										<div class="card__author">
 											<img src="img/avatars/avatar11.jpg" alt="">
 											<a href="author.html">@aaarthur</a>
@@ -1179,7 +1179,7 @@
 									</a>
 									<h3 class="author__name"><a href="author.html">Adam Zapel</a></h3>
 									<h3 class="author__nickname"><a href="author.html">@aaarthur</a></h3>
-									<p class="author__text">All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary</p>
+									<p class="author__text">I am here to build my empire. Making millions baby when everyone else is sleeping.</p>
 									<div class="author__wrap">
 										<div class="author__followers">
 											<p>3829</p>
@@ -1278,7 +1278,7 @@
 									</a>
 									<h3 class="author__name"><a href="author.html">Mona Lott</a></h3>
 									<h3 class="author__nickname"><a href="author.html">@fantraingle</a></h3>
-									<p class="author__text">All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary</p>
+									<p class="author__text">I am here to build my empire. Making millions baby when everyone else is sleeping.</p>
 									<div class="author__wrap">
 										<div class="author__followers">
 											<p>5 924</p>
@@ -1349,7 +1349,7 @@
 					<div class="footer__logo">
 						<img src="img/logo.svg" alt="">
 					</div> 
-					<p class="footer__tagline">Digital marketplace for crypto collectibles <br>and non-fungible tokens (NFTs). <br>Buy, sell, and discover exclusive digital assets.</p>
+					<p class="footer__tagline">Digital marketplace for crypto collectibles <br>and non-fungible tokens (Contracts). <br>Buy, sell, and discover Contract Titles.</p>
 
 					<div class="footer__lang">
 						<a class="footer__lang-btn" href="#" role="button" id="dropdownLang" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
