--- a/token.html
+++ b/token.html
@@ -19,7 +19,7 @@
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="author" content="Dmitry Volkov">
-	<title>Unifund – NFT Marketplace HTML Template</title>
+	<title>Unifund – Contract Marketplace HTML Template</title>
 
 </head>
 <body>
@@ -127,7 +127,7 @@
 				<!-- title -->
 				<div class="col-12 col-xl-11">
 					<div class="main__title main__title--page">
-						<h1>Unifund – NFT Marketplace HTML Template</h1>
+						<h1>Unifund – Contract Marketplace HTML Template</h1>
 
 						<p>Many desktop publishing packages and <a href="#">web page</a> editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
 
@@ -142,7 +142,7 @@
 					<div class="step">
 						<span class="step__number">01</span>
 						<h3 class="step__title">Set up your wallet</h3>
-						<p class="step__text">It to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining</p>
+						<p class="step__text">Once you’ve set up your wallet of choice, connect it to our marketplace by clicking this link.</p>
 					</div>
 				</div>
 				
@@ -150,15 +150,15 @@
 					<div class="step">
 						<span class="step__number">02</span>
 						<h3 class="step__title">Create your collection</h3>
-						<p class="step__text">All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first</p>
+						<p class="step__text">Click Launch and set up your collection. Add your business, individual products, or a winning idea individually or as a collection.</p>
 					</div>
 				</div>
 
 				<div class="col-12 col-lg-4">
 					<div class="step">
 						<span class="step__number">03</span>
-						<h3 class="step__title">Add your NFTs</h3>
-						<p class="step__text">It to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting</p>
+						<h3 class="step__title">Minnt Your Contract</h3>
+						<p class="step__text">Set your terms, add a title and description, and customize your individual contract with Propertys, ROI, and unlockable rewards.</p>
 					</div>
 				</div>
 			</div>
@@ -211,7 +211,7 @@
 						<span class="feature__icon feature__icon--red">
 							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M2.5,10.56l9,5.2a1,1,0,0,0,1,0l9-5.2a1,1,0,0,0,0-1.73l-9-5.2a1,1,0,0,0-1,0l-9,5.2a1,1,0,0,0,0,1.73ZM12,5.65l7,4-7,4.05L5,9.69Zm8.5,7.79L12,18.35,3.5,13.44a1,1,0,0,0-1.37.36,1,1,0,0,0,.37,1.37l9,5.2a1,1,0,0,0,1,0l9-5.2a1,1,0,0,0,.37-1.37A1,1,0,0,0,20.5,13.44Z"/></svg>
 						</span>
-						<h3 class="feature__title">Collect NFTs</h3>
+						<h3 class="feature__title">Collect Contracts</h3>
 						<p class="feature__text">If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text</p>
 					</div>
 				</div>
@@ -231,7 +231,7 @@
 						<span class="feature__icon feature__icon--green">
 							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M20.47,7.37s0,0,0-.08l-.06-.15a.71.71,0,0,0-.07-.09.94.94,0,0,0-.09-.12l-.09-.07L20,6.78l-7.5-4.63a1,1,0,0,0-1.06,0L4,6.78l-.09.08-.09.07a.94.94,0,0,0-.09.12.71.71,0,0,0-.07.09l-.06.15s0,0,0,.08a1.15,1.15,0,0,0,0,.26v8.74a1,1,0,0,0,.47.85l7.5,4.63h0a.47.47,0,0,0,.15.06s.05,0,.08,0a.86.86,0,0,0,.52,0s.05,0,.08,0a.47.47,0,0,0,.15-.06h0L20,17.22a1,1,0,0,0,.47-.85V7.63A1.15,1.15,0,0,0,20.47,7.37ZM11,19.21l-5.5-3.4V9.43L11,12.82Zm1-8.12L6.4,7.63,12,4.18l5.6,3.45Zm6.5,4.72L13,19.21V12.82l5.5-3.39Z"/></svg>
 						</span>
-						<h3 class="feature__title">Get airdrop <br>as NFT holder</h3>
+						<h3 class="feature__title">Get airdrop <br>as Contract holder</h3>
 						<p class="feature__text">Various versions have evolved over the years, sometimes by accident, sometimes on purpose</p>
 					</div>
 				</div>
@@ -288,7 +288,7 @@
 					<div class="footer__logo">
 						<img src="img/logo.svg" alt="">
 					</div> 
-					<p class="footer__tagline">Digital marketplace for crypto collectibles <br>and non-fungible tokens (NFTs). <br>Buy, sell, and discover exclusive digital assets.</p>
+					<p class="footer__tagline">Digital marketplace for crypto collectibles <br>and non-fungible tokens (Contracts). <br>Buy, sell, and discover Contract Titles.</p>
 
 					<div class="footer__lang">
 						<a class="footer__lang-btn" href="#" role="button" id="dropdownLang" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
